--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@
     background-color: #fff;
 }
 
+.main-footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .fcf-body {
     margin: 0;
     flex-grow: 1;
